feat(user): implement user deletagor post and list
